manifests/service-loadbalance.yaml
apiVersion: v1
kind: Service
metadata:
  name: electric-car
spec:
  type: LoadBalancer
  externalIPs:
  - 172.31.10.152
  - 172.31.7.116
  - 172.31.43.67
  selector:
    app: electric-car
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
