manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
  labels:
    app: electric-car
  name: electric-car
spec:
  rules:
  - host: electro.badakim.shop
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: electric-car
            port:
             number: 80
